<resources>
    <string name="app_name">Discovers Sho</string>
    <string name="intro_first_line">Stay home and Shop online</string>
    <string name="intro_second_line"> </string>
    <string name="btn_login">User Login here</string>
    <string name="btn_user_signup">New User? Register here</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password </string>
    <string name="user_login">USER LOGIN</string>
    <string name="registration_message">New user registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number">Contact number</string>
    <string name="btn_resgister">Register</string>
    <string name="resgistration_message">string</string>

</resources>