<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".ResigsterActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="454dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80sp"
            android:src="@drawable/shopp_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:layout_marginBottom="40sp"
            android:text="@string/resgistration_message"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:textSize="22sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userFirstNameWrapper"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            />

            <EditText
                android:id="@+id/userfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorBlueGray"
                android:textSize="18sp" />


            </LinearLayout>
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:id="@+id/lastNameWrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userlastname"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    android:textSize="18sp"
                    android:colorHint="@color/colorDarkRed"
                    />

    </LinearLayout>
    <android.support.design.widget.TextInputLayout
    android:id="@=id/@+id/useremail"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent" />
    <EditText
    android:hint="@string/email_address"
    android:id="@+id/userEmailAddress"
    android:inputType="textEmailAddress"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:textColorHint="@color/colorBlueGray"
    android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2" />
    <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/passwordwrapper"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userPassword"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorBlue"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/confPasswordWrapper"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/userConfPassword"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        android:textColorHint="@color/colorBlue"
                        android:text="@string/confirm_password"
                        />
                </android.support.design.widget.TextInputLayout>

    </LinearLayout>
<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactNoWrapper"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userContactNumber"
            android:inputType="phone"
            andriod:textSize="18sp"
            android:textColorHint="@color/colorBlue"
            android:hint="@string/contact_number"
            />

    </android.support.design.widget.TextInputLayout>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="@string/btn_register"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        />

    </LinearLayout>

</LinearLayout>